<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bckgrnd"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/city"
            android:textColor="@color/colorBackgroundText"
            android:textSize="20sp">

        </TextView>

        <TextView
            android:id="@+id/currentTemp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/currentTemperature"
            android:textAlignment="center"
            android:textColor="@color/colorCurrentTemperature"
            android:textSize="70sp">

        </TextView>

        <TextView
            android:id="@+id/currentCloud"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/currentCloudAmount"
            android:textAlignment="center"
            android:textColor="@color/colorBackgroundText"
            android:textSize="18sp">

        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/time0H"
                    style="@style/textTodayStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/timeNow">

                </TextView>

                <ImageView
                    android:id="@+id/cloud0H"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    app:srcCompat="@drawable/ios11weatherrainicon">

                </ImageView>

                <TextView
                    android:id="@+id/temp0H"
                    style="@style/textTodayStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/currentTemperature">

                </TextView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/time3H"
                    style="@style/textTodayStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/timeNow">

                </TextView>

                <ImageView
                    android:id="@+id/cloud3H"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    app:srcCompat="@drawable/ios11weatherrainicon">

                </ImageView>

                <TextView
                    android:id="@+id/temp3H"
                    style="@style/textTodayStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/currentTemperature">

                </TextView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/time6H"
                    style="@style/textTodayStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/timeNowPlus1H">

                </TextView>

                <ImageView
                    android:id="@+id/cloud6H"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    app:srcCompat="@drawable/ios11weatherdrizzleicon">

                </ImageView>

                <TextView
                    android:id="@+id/temp6H"
                    style="@style/textTodayStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/temperaturePlus1H">

                </TextView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/time9H"
                    style="@style/textTodayStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/timeNowPlus2H">

                </TextView>

                <ImageView
                    android:id="@+id/cloud9H"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    app:srcCompat="@drawable/ios11weathercloudyicon">

                </ImageView>

                <TextView
                    android:id="@+id/temp9H"
                    style="@style/textTodayStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/temperaturePlus2H">

                </TextView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/time12H"
                    style="@style/textTodayStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/timeNowPlus3H">

                </TextView>

                <ImageView
                    android:id="@+id/cloud12H"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    app:srcCompat="@drawable/ios11weathercloudyicon">

                </ImageView>

                <TextView
                    android:id="@+id/temp12H"
                    style="@style/textTodayStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/temperaturePlus3H">

                </TextView>

            </LinearLayout>

        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp">

            <TableRow>

                <TextView
                    android:id="@+id/date0D"
                    style="@style/textWeatherTableLeft"
                    android:text="@string/datePlus1D" />

                <ImageView
                    android:id="@+id/cloud0D"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="3"
                    app:srcCompat="@drawable/ios11weatherdrizzleicon" />

                <TextView
                    android:id="@+id/temp0D"
                    style="@style/textWeatherTableRight"
                    android:text="@string/weatherPlus1D" />

            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/date1D"
                    style="@style/textWeatherTableLeft"
                    android:text="@string/datePlus2D" />

                <ImageView
                    android:id="@+id/cloud1D"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="3"
                    app:srcCompat="@drawable/ios11weatherheavyrainicon" />

                <TextView
                    android:id="@+id/temp1D"
                    style="@style/textWeatherTableRight"
                    android:text="@string/weatherPlus2D" />

            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/date2D"
                    style="@style/textWeatherTableLeft"
                    android:text="@string/datePlus3D" />

                <ImageView
                    android:id="@+id/cloud2D"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="3"
                    app:srcCompat="@drawable/ios11weathersunnyicon">

                </ImageView>

                <TextView
                    android:id="@+id/temp2D"
                    style="@style/textWeatherTableRight"
                    android:text="@string/weatherPlus3D" />

            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/date3D"
                    style="@style/textWeatherTableLeft"
                    android:text="@string/datePlus4D" />

                <ImageView
                    android:id="@+id/cloud3D"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="3"
                    app:srcCompat="@drawable/ios11weatherpartlysunnyicon">

                </ImageView>

                <TextView
                    android:id="@+id/temp3D"
                    style="@style/textWeatherTableRight"
                    android:text="@string/weatherPlus4D" />

            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/date4D"
                    style="@style/textWeatherTableLeft"
                    android:text="@string/datePlus5D" />

                <ImageView
                    android:id="@+id/cloud4D"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="3"
                    app:srcCompat="@drawable/ios11weathercloudyicon">

                </ImageView>

                <TextView
                    android:id="@+id/temp4D"
                    style="@style/textWeatherTableRight"
                    android:text="@string/weatherPlus5D" />

            </TableRow>

        </TableLayout>

    </LinearLayout>

    <ImageButton
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/reload"
        android:id="@+id/refreshButton"/>

</RelativeLayout>